# bookstore

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yaml  env.example  pyproject.toml
.github/workflows/: build.yml  github-actions-demo.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category_serializer.py  test_product_serializer.py  test_serializers.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
